--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					Challenge by
 					<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
 				</p>
-				Coded by <a href="#">Master-Shiffu</a>
+				Coded by <a href="https://www.twitter.com/tolahni_">Master-Shiffu</a>
 			</div>
 		</main>
 		<script src="./javascript/index.js" defer></script>
